<resources>
    <string name="app_name">Vendedores</string>
    <string name="is_login_ready">isLoginReady</string>
    <string name="email">email</string>
    <string name="given_name">givenName</string>
    <string name="family_name">familyName</string>
    <string name="client_id">clientId</string>
    <string name="picture">picture</string>
    <string name="phone">phone</string>
    <string name="username">userName</string>
    <string name="token">token</string>
    <string name="delivery">Delivery</string>
    <string name="lavalle">\ Lavalle</string>
    <string name="welcome_message">Bienvenido!</string>
    <string name="welcome_message_subtitle">Inicia sesion con Google para comenzar a vender</string>
    <string name="terms_and_conditions">Continuando, Acepto los <a href="https://www.deliverylavalle.com.ar/terminosycondiciones">Terminos y condiciones</a></string>
    <string name="no_conection">Hay problemas de conexion con el servidor, intenta nuevamente</string>
    <string name="company_limits">companyLimits</string>
    <string name="app_bar_1_maps">\Definiremos \</string>
    <string name="app_bar_2_maps">tu alcance de Delivery</string>
    <string name="company_detail">Datos de tu empresa</string>
    <string name="save_company">Guardar Compañia</string>
    <string name="take_a_picture">Selecciona una Foto</string>
    <string name="take_a_picture_field">Sube un logo de tu empresa</string>
    <string name="are_you_available">¿Estás disponible para empezar a vender ahora?</string>
    <string name="arguments_limits">arguments_limits</string>
    <string name="required">Este Campo es Requerido</string>
    <string name="cash">Efectivo</string>
    <string name="mercado_pago">Mercado Pago</string>
    <string name="mercado_pago_label">Enviar Link de Mercado Pago</string>
    <string name="retry_in_local">Entrega en el Local</string>
    <string name="delivery_method_delivery">Entrega por Delivery</string>
    <string name="photo_selected">Foto Seleccionada</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_orders">Pedidos</string>
    <string name="title_category">Categorias</string>
    <string name="title_products">Productos</string>
    <string name="title_profile">Perfil</string>
    <string name="titleComponent">Main Title</string>
    <string name="order_number">Orden #%s</string>
    <string name="order_state">Estado: %s</string>
    <string name="client_name">Nombre del Cliente: %s</string>
    <string name="upload_a_photo_error">No tenemos todos los datos, Subiste una foto?</string>
    <string name="products">Productos</string>
    <string name="total">Total</string>
    <string name="location">Ubicacion</string>
    <string name="argumentOrder">arguments_order</string>
    <string name="detail_order_id">Orden: #%s</string>
    <string name="detail_order_state">Estado: %s</string>
    <string name="detail_order_payment_method">Método de Pago: %s</string>
    <string name="detail_order_client_name">Cliente: %s</string>
    <string name="detail_order_client_address">Dirección: %s %s, %s %s %s</string>
    <string name="detail_order_client_phone">Telefono: %s</string>
    <string name="detail_order_total">$%s</string>
    <string name="pending">Pendiente</string>
    <string name="preparing">En preparación</string>
    <string name="on_way">En Camino</string>
    <string name="ready_to_retire">Listo para Retirar</string>
    <string name="delivered">Entregado</string>
    <string name="canceled">Cancelado</string>
    <string name="retry_in_local_label">El Pedido será retirado por tu local</string>
    <string name="state_changed">Estado cambiado correctamente</string>
    <string name="orders_empty">No hay Pedidos aqui</string>
    <string name="google_maps_key">AIzaSyAAOsoCYtrP6BzMNPtmih5_1hNBrXJgmW4</string>
    <string name="category_empty">No hay categorias, puedes crear una</string>
    <string name="product_empty">No hay productos, puedes crear uno</string>
    <string name="add_new_category">Agrega una nueva categoria</string>
    <string name="add_new_product">Agrega un nuevo producto</string>
    <string name="add_category_label">Nombre de la Categoria</string>
    <string name="save_category">Guardar Categoria</string>
    <string name="price">Precio</string>
    <string name="save_product">Guardar Producto</string>
    <string name="stock_available">¿Tenes stock disponible?</string>
    <string name="upload_a_product_image">Sube una imagen del Producto</string>
    <string name="no_stock">Sin stock</string>
    <string name="deleted">Eliminado Correctamente</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="usage_label">Llevas $ %s de uso de la plataforma este mes</string>
    <string name="there_is_no_reviews">No hay reseñas de aqui</string>
    <string name="order_something_to_add_a_review">Pide algo para añadir una reseña aqui</string>
    <string name="meli_link">Link de Mercado Pago</string>
    <string name="meli_link_title">Pega el Link de Mercado Pago aqui para que tu cliente pueda pagarte</string>
    <string name="send_meli_link">Enviar Link</string>
    <string name="there_no_are_invoices">No hay periodos de Facturacion</string>
    <string name="come_back_later_invoices">Vuelve a principio de cada mes para verlo</string>
    <string name="period_label">Facturacion del periodo %s</string>
    <string name="what_this_means">¿Que significa esto?</string>
    <string name="steps">Metodos para pagar</string>
    <string name="invoice_detail_period">Periodo de facturacion del %s</string>
    <string name="invoice_detail_status">Estado del pedido: %s</string>
    <string name="invoice_detail_mount">Monto: $ %s</string>
    <string name="invoice_detail_meaning_pending">Significa que tenes abonar este monto. \n \n
        Recuerda que tienes hasta el 10 de cada mes para abonar \n \n
        No olvides enviar el comprobante para acreditar el pago</string>
    <string name="invoice_detail_meaning_payed">Significa que tu pago ya fue revisado y aprobado, no hay nada que hacer aqui. ¡Gracias por tu pago!</string>
    <string name="email_subject">Envio de comprobante de %s del periodo %s</string>
    <string name="token_client_id">53044701658-a7r3evgf1basgjbpu0cp9ifl9uugeu7j.apps.googleusercontent.com</string>
    <string name="we_have_a_problem_sign_out">Tuvimos un problema al desloguarte, intenta de nuevo</string>
</resources>