<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addCategory.AddCategory"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/app_bar"/>
        <com.axelfernandez.deliverylavallevendedores.component.TitleComponent
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:title="@string/add_new_category"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/add_title_category"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <EditText
            android:hint="@string/add_category_label"
            android:id="@+id/add_category_field"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/save_category"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="10dp"
        android:text="@string/save_category"
        android:textColor="@color/colorPrimary"
        android:background="@color/redDark"/>3

</FrameLayout>