<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.meliLink.MeliLinkFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_bar" />

        <com.axelfernandez.deliverylavallevendedores.component.TitleComponent
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:title="@string/meli_link_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meli_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/add_meli_link_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meli_link"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/send_meli_link_button"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="10dp"
        android:text="@string/send_meli_link"
        android:textColor="@color/colorPrimary"
        android:background="@color/redDark"/>3
</FrameLayout>