<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addProduct.AddProduct"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/app_bar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize"
        android:layout_marginTop="?actionBarSize"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.axelfernandez.deliverylavallevendedores.component.TitleComponent
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:title="@string/add_new_product"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/add_name_product"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">
                <EditText
                    android:hint="Nombre del Producto"
                    android:id="@+id/add_name_product_field"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/add_description_product"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">
                <EditText
                    android:hint="Descripcion del Producto"
                    android:id="@+id/add_name_description_field"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                >
                <com.axelfernandez.deliverylavallevendedores.component.TitleComponent
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:title="$"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/add_price_product"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:hint="Precio"
                        android:id="@+id/add_price_product_field"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:text="Categoria"/>

            <Spinner
                android:id="@+id/spinner_category_product"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:text="@string/stock_available"/>


            <ToggleButton
                android:id="@+id/available_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:text="@string/upload_a_product_image"/>


            <Button
                android:id="@+id/product_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/take_a_picture"/>

            <ImageView
                android:visibility="gone"
                android:id="@+id/product_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/save_product"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="10dp"
        android:text="@string/save_product"
        android:textColor="@color/colorPrimary"
        android:background="@color/redDark"/>3

</FrameLayout>