<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.companyRegister.CompanyRegisterFragment">
    <include layout="@layout/app_bar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="?actionBarSize"
        android:layout_marginBottom="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:text="@string/company_detail"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/layout_name">

                <EditText
                    android:hint="Nombre de la empresa"
                    android:id="@+id/name"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/layout_description">

                <EditText
                    android:hint="¿Que vendés?"
                    android:id="@+id/description"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:text="Categoria"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/layout_address">

                <EditText
                    android:hint="Dirección"
                    android:id="@+id/address"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/layout_phone">

                <EditText
                    android:hint="Telefono"
                    android:id="@+id/phone"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:text="Metodos de pago que aceptas"/>

            <CheckBox
                android:id="@+id/payment_method_cash"
                android:text="Efectivo"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </CheckBox>
            <CheckBox
                android:id="@+id/payment_method_MercadoPago"
                android:text="Mercado Pago"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </CheckBox>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:text="Metodos de Entrega"/>
            <CheckBox
                android:id="@+id/delivery_method_delivery"
                android:text="Entrega por Delivery"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </CheckBox>
            <CheckBox
                android:id="@+id/delivery_method_in_local"
                android:text="Entrega en el Local"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </CheckBox>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:text="@string/are_you_available"/>


            <ToggleButton
                android:id="@+id/available_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:text="@string/take_a_picture_field"/>


            <Button
                android:id="@+id/company_register_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/take_a_picture"/>

            <ImageView
                android:visibility="gone"
                android:id="@+id/company_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_registry"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
  <Button
    android:id="@+id/save_company"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:layout_marginTop="10dp"
    android:text="@string/save_company"
    android:textColor="@color/colorPrimary"
    android:background="@color/redDark"/>
</FrameLayout>